# my-app-insights

./: Cargo.toml  README.md
src/: app_insights_telemetry.rs  events_queue.rs  lib.rs  telemetry_event.rs  telemetry_publisher.rs  telemetry_writer.rs
