[package]
name = "my-app-insights"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
my-telemetry = { branch = "main", git = "https://github.com/MyJetTools/my-telemetry.git" }

tokio = { version = "1.5.0", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
tokio-util = "*"
appinsights = "*"
